<resources>
    <string name="app_name">World Exchange Rates</string>
    <string name="title_all_currencies">All currencies</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_converter">Converter</string>

    <string name="country_flag">Country Flag</string>
    <string name="currency_value">%.02f</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">C</string>
    <string name="btn_backspace">back</string>
    <string name="btn_period">&#46;</string>
    <string name="btn_doublezero">00</string>
    <string name="btn_equals">=</string>
    <string name="number_button">number_button</string>

    <string name="share">Share</string>
    <string name="share_via">Share via:</string>
    <string name="shared_using">Shared via</string>
    <string name="currency_conversion">Currency conversion</string>

    <string name="set_favorite">Set as favorite?</string>
    <string name="remove_favorite">Remove as favorite?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>

    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
</resources>
