<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="clickHandler"
                  type="com.vamsi.xchangerates.app.utils.OnClickHandler"/>
    </data>
    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/custom_border"
        android:divider="@drawable/keyboard_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        android:weightSum="5">

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_1"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/number_one"/>

            <TextView
                android:id="@+id/t9_key_2"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/number_two"/>

            <TextView
                android:id="@+id/t9_key_3"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/number_three"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_4"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/number_four"/>

            <TextView
                android:id="@+id/t9_key_5"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/number_five"/>

            <TextView
                android:id="@+id/t9_key_6"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/number_six"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_7"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/number_seven"/>

            <TextView
                android:id="@+id/t9_key_8"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/number_eight"/>

            <TextView
                android:id="@+id/t9_key_9"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/number_nine"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_period"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/btn_period"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/t9_key_0"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/number_zero"/>

            <ImageView
                android:id="@+id/t9_key_backspace"
                style="@style/keyboard_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:src="@drawable/ic_backspace_black_24dp"
                android:contentDescription="@string/btn_backspace"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_clear"
                style="@style/keyboard_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/btn_clear"
                android:textColor="@color/Black"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/t9_key_doublezero"
                style="@style/keyboard_button"
                android:tag="@string/number_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/btn_doublezero"/>

            <TextView
                android:id="@+id/t9_key_equals"
                style="@style/keyboard_equals_button"
                android:onClick="@{(v) -> clickHandler.onClick(v)}"
                android:text="@string/btn_equals"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
    </TableLayout>
</layout>